kustomize/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      # Media is a hostPath on this node's HDD, and the GPU is here too
      nodeSelector:
        kubernetes.io/hostname: november
      runtimeClassName: nvidia
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: jellyfin
          image: "jellyfin/jellyfin"
          ports:
            - containerPort: 8096
              name: http
          volumeMounts:
            - mountPath: /data/media
              name: media
            - mountPath: /config
              name: config
            - mountPath: /config/transcodes
              name: transcodes
            - mountPath: /cache
              name: cache
      volumes:
        - name: media
          hostPath:
            # Created by the media Ansible role; pods fail to start if it's missing
            path: /mnt/bulk/media
            type: Directory
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: transcodes
          emptyDir:
            medium: Memory
            sizeLimit: 6Gi
        - name: cache
          emptyDir: {}
