kustomize/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  selector:
    app.kubernetes.io/name: jellyfin
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
