kustomize/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: jellyfin
      port:
        number: 80
  tls:
    - hosts:
        - jellyfin
